--- a/pong-styles.css
+++ b/pong-styles.css
@@ -13,7 +13,7 @@ body {
   border: 5px solid black;
   left: 0;
   position: absolute;
-  background-image: url("creepy_background.jpg");
+  background-image: url("Creepy_background.jpg");
   background-size: cover;
 }
 
